scrollbar fix

--- a/htdocs/project/css/auswahl.css
+++ b/htdocs/project/css/auswahl.css
@@ -40,7 +40,7 @@ body{
 }
 
 #scrollbar1::-webkit-scrollbar-thumb {
-    border-radius: 8px;
+    border-radius: 8vw;
     background-color: #0178ff82;
 }
 
